--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
-    "react-split": "^2.0.14"
+    "react-split": "^2.0.14",
+    "react-window-observer": "^1.2.2"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
